k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: water-cube
  labels:
    name: water-cube
